finished layouts of sections, waiting to fix buggy horizontal scroll

--- a/css/accessory.css
+++ b/css/accessory.css
@@ -7,32 +7,95 @@
 .accessory-items{
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 10rem 3fr 10rem;
-  gap: 2rem;
+  grid-template-rows: 10rem 10rem 10rem;
+  box-sizing: border-box;
+  align-items: center;
+  text-align: center;
+  gap: 1.5rem;
+  box-sizing: border-box;
+  font-weight: 800;
 }
 
 .elect{
   grid-row: 2;
   grid-column: 2;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Access/moto-elect.jpg);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
 
 .luggs{
   grid-row: 2;
   grid-column: 3;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Access/moto-lugg.jpg);
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
 
 .comms{
   grid-row: 2;
   grid-column: 4;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Access/moto-comms.jpg);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
 
 .maint{
   grid-row: 2;
   grid-column: 5;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Access/moto-maint.jpg);
+  background-repeat: no-repeat;
+  background-size: 45%;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
 
 .more{
   grid-row: 3;
-  grid-column: 2 / span 4;
+  grid-column: 1 / span 6;
   text-align: center;
+  background: var(--card-faded);
+  color: var(--text-color);
+  height: 3rem;
+  font-size: 22px;
+}
+
+/* Hover Effect */
+
+.elect:hover,
+.luggs:hover,
+.comms:hover,
+.maint:hover{
+  width: 95%;
+  height: 95%;
+}
+
+.more:hover{
+  color: var(--second-text);
 }
