--- a/css/gear.css
+++ b/css/gear.css
@@ -6,40 +6,120 @@
 
 .gear-items{
   display: grid;
-  grid-template-columns: 1fr repeat(5, 4rem) 1fr;
+  grid-template-columns: 1fr repeat(2, 3fr) 1fr;
   grid-row: 1fr 3fr 1fr;
   height: inherit;
-  gap: 2rem;
+  box-sizing: border-box;
+  align-items: center;
+  text-align: center;
+  gap: 1.5rem;
+  box-sizing: border-box;
 }
 
+.gear-head{
+  grid-column: 1 / span 7 ;
+}
+
+/* Helmet Styles */
 .moto-helm{
   grid-column: 2;
   grid-row: 2;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Gear/moto-helm.jpg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
 
+/* Gloves Styles */
 .moto-glove{
   grid-column: 3;
   grid-row: 2;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Gear/moto-glove.jpg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
+
+
+/* Jacket Styles */
 .moto-jack{
   grid-column: 4;
   grid-row: 2;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Gear/moto-jacket.jpg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
+
+/* Pants Styles */
 .moto-pant{
   grid-column: 5;
   grid-row: 2;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Gear/moto-pant.jpg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
+
+/* Boots Style */
 .moto-boot{
   grid-column: 6;
   grid-row: 2;
+  width: 100%;
+  height: 100%;
+
+  background-image: url(../images/Gear/moto-boot.jpg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  font-size: 22px;
+  background-color: rgba(128, 128, 128, 0.356);
 }
 
 .ad{
   grid-row: 3;
   grid-column: 1 / span 7;
-  background: linear-gradient(red, black);
+  background: var(--card-faded);
   color: rgba(0, 255, 255, 0.753);
-  text-align: center;
-  align-items: center;
   height: 3rem;
+}
+
+/* Hover Effects */
+
+.moto-helm:hover,
+.moto-glove:hover,
+.moto-jack:hover,
+.moto-pant:hover,
+.moto-boot:hover{
+  width: 95%;
+  height: 95%;
+}
+
+.ad a:hover{
+  color: var(--second-text);
 }
