--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media all and (max-width: 700px){
+@media all and (max-width: 900px){
   /* Nav for Mobile */
   .navbar .list-items{
     margin-right: 0;
@@ -6,8 +6,8 @@
   }
 
   .navbar .site-name{
+    width: 100%;
     padding-left: 30px;
-    width: 100vw;
   }
 
   .navbar .list-items .items,
@@ -63,13 +63,13 @@
   {
     display: block;
   }
-
   /* Moto Section Styles */
 
   .zoomies{
     grid-row: 1;
-    grid-column: 2 / 4 ;
+    grid-column: 2 / 4;
   }
+
   .moto-moto{
     grid-template-columns: 2fr 3fr 3fr 2fr;
   }
@@ -106,6 +106,9 @@
 
   /* Gear Styles */
 
+  .gear-content{
+    height: 60vh;
+  }
   .gear-items{
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
@@ -114,8 +117,8 @@
   .gear-head{
     grid-column: 1 / 7;
     box-sizing: border-box;
-    background: linear-gradient(red, black);
-    color: white;
+    background: var(--card-faded);
+    color: var(--text-color);
   }
 
   .moto-helm{
@@ -141,4 +144,32 @@
     grid-row: 5;
     grid-column: 1 / span 6;
   }
+
+  /* Accessory Section */
+  .accessory-content{
+    height: 50vh;
+  }
+
+  .accessory-items{
+    grid-template-columns: 1fr repeat(2, 2fr) 1fr;
+    grid-template-rows: 1fr repeat(3, 2fr) 1fr;
+  }
+
+  .comms{
+    grid-row: 3;
+    grid-column: 2;
+  }
+  .maint{
+    grid-row: 3;
+    grid-column: 3;
+  }
+  .more{
+    grid-row: 5;
+  }
+
+  /* Footer Section */
+  .map{
+    width: 100%;
+  }
+
 }
